# rover

./: .gitignore  Cargo.toml  README.md
backend/src/: main.rs
frontend/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  shell.nix  tailwind.config.js
frontend/src/: main.rs
frontend/src/components/: directory_card.rs  mod.rs  navbar.rs
